--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,7 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
+    <script type="module" src="./node_modules/flowbite/dist/flowbite.js"></script>
     <script src="./node_modules/flowbite/dist/flowbite.js"></script>
   </body>
 </html>
